[package]
name = "ner-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.0"
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
lazy_static = "1.4"
