[package]
name = "ner-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }




